flores color rojo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>FLORES</title>
 </head>
+
 <body>
     <div class="greetings">
 
@@ -17,21 +19,24 @@
         <span>A</span>
     </div>
     <div class="greetings">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
+        <span>H</span>
+        <span>E</span>
+        <span>R</span>
+        <span>M</span>
+        <span>O</span>
+        <span>S</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>Tengo un regalo especial para ti!!</span>
+        <span>Te mereces el mundo entero pero por ahora te dare este pequeño
+            detalle, espero te guste!!</span>
     </div>
     <div class="button">
         <button>
-            <a href="FLORES.html">Haga Clic</a>
+            <a href="FLORES.html">Has click aqui Amor de mi vida</a>
         </button>
-        
+
     </div>
 </body>
+
 </html>
